# wedding-site

./: .env.example  .gitattributes  .gitignore  README.md  app.py  deploy_to_github.py  index.html  markdown_content_en.md  markdown_content_es.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
app/: __init__.py  auth.py  config.py  main.py  markdown_helper.py
app/static/css/: style.css
app/static/images/: maceijowka_aereal.txt
app/static/js/: login-handler.js
app/templates/: base.html  home.html  login.html
home/: es.html  index.html
static/: auth.js
static/css/: style.css
static/images/: maceijowka_map.txt  placeholder.txt
