[tool.poetry]
name = "wedding-site"
version = "0.1.0"
description = "Wedding website with authentication"
authors = ["IamjustNick <nicolasmgeijo@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.10"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"
python-jose = "^3.4.0"
passlib = "^1.7.4"
markdown2 = "^2.5.3"
bcrypt = "^4.3.0"
pydantic-settings = "^2.8.1"
itsdangerous = "^2.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "run:main"
